# highlight

./: .gitignore  CITATION.cff  CONTRIBUTING.md  LICENSE  README.md  app.py  config.toml  highlight.py  prompts.py  pyproject.toml
.github/workflows/: build.yml
data/: example_text_one.txt  highlight_template.docx  highlight_template.pptx
highlight/: __init__.py  llm.py  prompts.py  utils.py
highlight/data/: highlight_template.docx  highlight_template.pptx
notebooks/: to_word.ipynb
tests/: test-config.toml  test_utils.py
